--- a/views/game.erb
+++ b/views/game.erb
@@ -1,9 +1,23 @@
 <h3>welcome <%= session[:player_name] %></h3>
+
+<% if @play_again %>
+<p>
+<strong>Play again?</strong>
+<a href="/bet" class="btn btn-primary">Yes</a>
+<a href="/game_over" class="btn">No</a>
+</p>
+<% end %>
+
+
 <div class='well'>
 <h5>Dealer Cards:</h5>
-<% session[:dealer_cards].each do |card|%>
-	<%= card_image(card) %>
-	<% end %>
+<% session[:dealer_cards].each_with_index do |card,i|%>
+ <% if session[:turn] != "dealer" && i == 0 %>
+    <img src="/images/cards/cover.jpg">
+    <% else %>
+    <%= card_image(card) %>
+  <% end %>
+<% end %>
 	<% if @show_dealer_hit_button %><p>
 	<h5>Dealer has <%= calculate_total(session[:dealer_cards])%></h5>
 	<form action='/game/dealer/hit' method='post'>
@@ -16,6 +30,8 @@
 	<%session[:player_cards].each do |card| %>
 	<%= card_image(card) %>
 	<% end %>
+	<h4>
+		<%= session[:player_name]%> has $<%= session[:player_pot]%> and bets $<%= session[:player_bet]%></h4>
 </div>
 
 <p>player <%= session[:player_name]%> has <%= calculate_total(session[:player_cards])%></p>
