--- a/views/new_player.erb
+++ b/views/new_player.erb
@@ -3,5 +3,5 @@ new player form
 <form action ='/new_player' method='post'>
   <input type='text' name='player_name'/>
   <br/>
-  <input type='submit' class='btn' />
+  <input type='submit' value="Je naam !"class='btn btn-primary' />
 </form>
